[package]
name = "app_base"
version = "1.0.0"
edition = "2024"
description = "A minimal, reusable base for Rust applications"
authors = ["takashialpha <takashialpha@protonmail.com>"]
license = "Apache-2.0"

[dependencies]
dirs = "6.0.0"
libc = "0.2.178"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.44"

[lib]
path = "src/lib.rs"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
incremental = false
